<resources>
    <string name="app_name">微信</string>
    <string name="content_descr"></string>
    
    <string name="main_tab_recent">微信</string>
    <string name="main_tab_contacts">通讯录</string>
    <string name="main_tab_find">发现</string>
    <string name="main_tab_mine">我</string>
    
    <string name="title_add">添加</string>
    <string name="title_search">搜索</string>
    <string name="title_chat_icon">聊天信息</string>
    
    <string name="find_friend">朋友圈</string>
    <string name="find_scan">扫一扫</string>
    <string name="find_shake">摇一摇</string>
    <string name="find_vicinity">附近的人</string>
    <string name="find_drift_bottles">漂流瓶</string>
    <string name="find_shop">购物</string>
    <string name="find_game">游戏</string>
    <string name="mine_photo">相册</string>
    <string name="mine_collect">收藏</string>
    <string name="mine_wallet">钱包</string>
    <string name="mine_face">表情</string>
    <string name="mine_setting">设置</string>
    
    <string name="title_chat">聊天</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
</resources>
